test/ui/test/metadata/unexpected-identifier-at-top-level.stderr
error: found identifier but expected end of input
 --> ${TEST_FOLDER}/metadata/unexpected-identifier-at-top-level.metadata:1:6
  |
1 | this is not good
  |      ^^
  |

error: aborting due to previous error

